soldoutの値ごとにモデルを作成

--- a/df_analysis.ipynb
+++ b/df_analysis.ipynb
@@ -648,6 +648,85 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       dateid      y week  soldout        name   kcal remarks event  payday  \\\n",
+      "0  2014-04-01  125.0  Tue        1       メンチカツ  377.0     NaN   NaN     NaN   \n",
+      "2  2014-04-03  100.0  Thu        1          酢豚  390.0     NaN   NaN     NaN   \n",
+      "3  2014-04-04   90.0  Fri        1  和風ソースハンバーグ  350.0     NaN   NaN     NaN   \n",
+      "5  2014-04-08   96.0  Tue        1    肉団子のシチュー  353.0     NaN   NaN     NaN   \n",
+      "6  2014-04-09   88.0  Wed        1        青椒肉絲  376.0     NaN   NaN     NaN   \n",
+      "\n",
+      "        weather  precipitation  temperature  \n",
+      "0         晴時々薄曇            0.0         13.9  \n",
+      "2            大雨           65.0         13.8  \n",
+      "3  晴時々曇一時雨、雷を伴う           40.0         15.3  \n",
+      "5            快晴            0.0         15.8  \n",
+      "6        晴後一時薄曇            0.0         15.5  \n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"train.csv\")\n",
+    "for name, group in df.groupby(\"soldout\"):\n",
+    "    if name == 1:\n",
+    "        df_soldout = group\n",
+    "print(df_soldout.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    125.0\n",
+       "2    100.0\n",
+       "3     90.0\n",
+       "5     96.0\n",
+       "6     88.0\n",
+       "Name: y, dtype: float64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_dst = df_soldout[\"y\"]\n",
+    "df_dst.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_dst.to_csv(\"train_soldout.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
