--- a/ensemble.ipynb
+++ b/ensemble.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,14 +38,28 @@
     }
    ],
    "source": [
-    "scores = [12.4064670, 14.9870378, 18.4445878, 11.7754520, 12.5750761]\n",
-    "alpha = 0.1\n",
-    "weights = [1/(score - 10) for score in scores]\n",
-    "print([weight * 100 for weight in weights])\n",
+    "# scores = [12.4064670, 14.9870378, 18.4445878, 11.7754520, 12.5750761]\n",
+    "# alpha = 0.1\n",
+    "# weights = [1/(score - 10) for score in scores]\n",
+    "# print([weight * 100 for weight in weights])\n",
     "\n",
-    "df = ensemble([\"submit_br.csv\", \"submit_gbr.csv\", \"submit_lasso.csv\", \"submit_rf.csv\", \"submit_ridge.csv\"], weights)\n",
+    "# df = ensemble([\"submit_br.csv\", \"submit_gbr.csv\", \"submit_lasso.csv\", \"submit_rf.csv\", \"submit_ridge.csv\"], weights)\n",
+    "# df.head()\n",
+    "# df.to_csv(\"submit_ensemble.csv\", index=False, header=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "submits = [\"submit_r_rf_9999.csv\", \"submit_p_rf_80.csv\", \"無加工/submit_xgboost_1872.csv\", \"submit_r_rf_7.csv\"]\n",
+    "weights = [1] * len(submits)\n",
+    "\n",
+    "df = ensemble(submits, weights)\n",
     "df.head()\n",
-    "df.to_csv(\"submit_ensemble.csv\", index=False, header=False)"
+    "df.to_csv(\"submit_r_ensemble.csv\", index=False, header=False)"
    ]
   },
   {
